TSK-1282: replaced Collections.singletonList with List.of in all tests