@@ -62,7 +62,7 @@ class GetTaskIdsOfClassificationCategoryReportAccTest extends AbstractReportAccT
               () ->
                   MONITOR_SERVICE
                       .createClassificationCategoryReportBuilder()
-                      .listTaskIdsForSelectedItems(Collections.singletonList(EXTERN), timestamp);
+                      .listTaskIdsForSelectedItems(List.of(EXTERN), timestamp);
           assertThatCode(callable).doesNotThrowAnyException();
         };
 
@@ -72,11 +72,9 @@ class GetTaskIdsOfClassificationCategoryReportAccTest extends AbstractReportAccT
   @WithAccessId(user = "monitor")
   @Test
   void should_SelectCompletedItems_When_CompletedTimeStampIsRequested() throws Exception {
-    final List<TimeIntervalColumnHeader> columnHeaders =
-        Collections.singletonList(new TimeIntervalColumnHeader(0));
+    final List<TimeIntervalColumnHeader> columnHeaders = List.of(new TimeIntervalColumnHeader(0));
 
-    final List<SelectedItem> selectedItems =
-        Collections.singletonList(new SelectedItem("EXTERN", null, 0, 0));
+    final List<SelectedItem> selectedItems = List.of(new SelectedItem("EXTERN", null, 0, 0));
 
     List<String> ids =
         MONITOR_SERVICE
@@ -122,8 +120,7 @@ class GetTaskIdsOfClassificationCategoryReportAccTest extends AbstractReportAccT
   @WithAccessId(user = "monitor")
   @Test
   void testGetTaskIdsOfCategoryReportWithWorkbasketFilter() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
     final List<TimeIntervalColumnHeader> columnHeaders = getListOfColumnHeaders();
 
     final List<SelectedItem> selectedItems = Arrays.asList(EXTERN, AUTOMATIC, MANUAL);
@@ -147,7 +144,7 @@ class GetTaskIdsOfClassificationCategoryReportAccTest extends AbstractReportAccT
   @WithAccessId(user = "monitor")
   @Test
   void testGetTaskIdsOfCategoryReportWithStateFilter() throws Exception {
-    final List<TaskState> states = Collections.singletonList(TaskState.READY);
+    final List<TaskState> states = List.of(TaskState.READY);
     final List<TimeIntervalColumnHeader> columnHeaders = getListOfColumnHeaders();
 
     final List<SelectedItem> selectedItems = Arrays.asList(EXTERN, AUTOMATIC, MANUAL);
@@ -201,7 +198,7 @@ class GetTaskIdsOfClassificationCategoryReportAccTest extends AbstractReportAccT
   @WithAccessId(user = "monitor")
   @Test
   void testGetTaskIdsOfCategoryReportWithDomainFilter() throws Exception {
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
+    final List<String> domains = List.of("DOMAIN_A");
     final List<TimeIntervalColumnHeader> columnHeaders = getListOfColumnHeaders();
 
     final List<SelectedItem> selectedItems = Arrays.asList(EXTERN, AUTOMATIC, MANUAL);
@@ -253,8 +250,7 @@ class GetTaskIdsOfClassificationCategoryReportAccTest extends AbstractReportAccT
   void testThrowsExceptionIfSubKeysAreUsed() {
     final List<TimeIntervalColumnHeader> columnHeaders = getListOfColumnHeaders();
 
-    final List<SelectedItem> selectedItems =
-        Collections.singletonList(new SelectedItem("EXTERN", "INVALID", -5, -2));
+    final List<SelectedItem> selectedItems = List.of(new SelectedItem("EXTERN", "INVALID", -5, -2));
 
     ThrowingCallable call =
         () ->
